fixed problems, think I hit stretch goals?

--- a/style.css
+++ b/style.css
@@ -36,3 +36,6 @@ h1 {
     background-color:  #f8ffd7;
     color:  rgb(75, 75, 75)
 }
+input { 
+    text-align: center; 
+}
